[package]
name = "rustyjam3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_basic_portals = { git = "https://github.com/Selene-Amanita/bevy_basic_portals.git" }
bevy = "*"

[profile.dev.package."*"]
opt-level = 3
